--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,39 @@
 {
-  "name": "ifyazilim/dosyayukleme",
+  "name": "ifyazilim/fileuploader",
   "type": "library",
-  "description": "PHP ile dosya yükleme işlerinde kullanılan kütüphanedir.",
+  "description": "PHP lightweight file upload plugin.",
   "keywords": [
     "dosya yükleme",
     "upload",
     "file upload"
   ],
-  "homepage": "http://github.com/ifyazilim/dosyayukleme",
+  "homepage": "http://github.com/ifyazilim/fileuploader",
   "license": "MIT",
   "authors": [
     {
       "name": "İrfan Evrens",
       "email": "irfanevrens@gmail.com",
       "homepage": "https://github.com/irfanevrens"
+    },
+    {
+      "name": "Hayrettin GÖK",
+      "email": "repiatx@gmail.com",
+      "homepage": "http://github.com/repiatx"
     }
   ],
   "require": {
     "league/flysystem": "1.0.*",
-    "php": ">=5.4.0",
+    "php": ">=5.6",
     "ext-fileinfo": "*",
-    "pekkis/mime-types": "^1.0"
+    "pekkis/mime-types": "^1.0",
+    "psr/http-message": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "3.7.*"
   },
   "autoload": {
     "psr-4": {
-      "IfYazilim\\DosyaYukleme\\": "src"
+      "ifyazilim\\FileUploader\\": "src"
     }
   }
 }
